# exercise-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.sh
misc/: BASH_GUIDE.md  VIM.md  data-structures.md
src/: files.cmake  main.cpp
src/codility/: binary_gap_test.cpp  count_div_test.cpp  cyclic_rotation_test.cpp  files.cmake  frog_jump_test.cpp  frog_river_one_test.cpp  max_counters_test.cpp  odd_occurrences_test.cpp  perm_check_test.cpp  perm_missing_elem_test.cpp  tape_equilibrium_test.cpp
src/codility/binary_gap/: binary_gap_test.cpp  files.cmake
src/codility/cyclic_rotation/: cyclic_rotation_test.cpp  files.cmake
src/codility/odd_occurrences/: files.cmake  odd_occurrences_test.cpp
src/codingames/: 1d_spreadsheet.cpp  files.cmake  lumen_test.cpp
src/data_structures/: files.cmake  linked_list.cpp
src/dummie_test/: dummie_test.cpp  files.cmake
